--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,4 +11,9 @@
     tools:context="com.veer.prefutilsample.MainActivity"
     >
 
+  <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/description"
+      />
 </RelativeLayout>
